# cas-offinder-rust-old

./: .gitignore
cas-offinder-cli/src/: cli_utils.rs  main.rs
cas-offinder-lib/: Cargo.toml  build.rs
cas-offinder-lib/src/: bit4ops.rs  chrom_chunk.rs  kernel.cl  kernel.cu  kernel_myers.cl  kernel_myers.cu  lib.rs  log_writer.rs  myers.rs  read_2bit.rs  read_fasta.rs  run_config.rs  search.rs  traceback.rs
cas-offinder-lib/tests/: integration_bulge.rs
docs/superpowers/plans/: 2026-04-16-myers-bulge-support.md
docs/superpowers/specs/: 2026-04-16-myers-bulge-design.md
