[package]
name = "cas_offinder_lib"
version = "1.0.0"
edition = "2021"
authors = ["Ben Black <benblack769@gmail.com>", "Jeongbin Park <jeongbin.park@pusan.ac.kr>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = { version = "0.19", default-features = false, features = ["driver", "cuda-12080", "dynamic-loading"] }
crossbeam-channel = "0.5.8"
rayon = "1.10"

[build-dependencies]
# Build-time compile .cu kernels to PTX via nvcc.
